--- a/optimus css/package.json
+++ b/optimus css/package.json
@@ -7,6 +7,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
+    "start": "ng serve"
   },
   "private": true,
   "dependencies": {
